# ge-vernova-virtual-sensing

./: .gitignore  CLAUDE.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md  grid-operations-and-role.html  grid-operations-and-role.md
.venv-site/: pyvenv.cfg
docs/: .build_manifest.json  Juan Carlos Oviedo Cepeda - 2026.docx  PUBLISH.md  build_site.py  index.html  job-requirements.md
docs/architecture/: AGMS-architecture.html  INDEX.html  appendix-distribution-observability-sources.html  appendix-virtual-sensing-module.html  diagram.html  grid-operations-and-role.html
docs/assets/: site.css
patents-site/: README.md  build.py  build_appendix.py  index.html
system1-measurement-source/: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml
system1-measurement-source/grafana/provisioning/dashboards/: default.yml  ieee33-est-day.json  ieee33-est-fault.json  ieee33-fault-event.json  ieee33-meas-day.json  ieee33-meas-fault.json  ieee33-state.json
system1-measurement-source/grafana/provisioning/datasources/: influxdb.yml
system1-measurement-source/mosquitto/config/: mosquitto.conf
system1-measurement-source/scripts/: inspect_opsd_day.py
system1-measurement-source/src/ieee33/: __init__.py  ac_model.py  config.py  estimate.py  estimate_config.py  estimators.py  fase_predict.py  fault_sim.py  influx.py  ingest.py  measure.py  measure_config.py  network.py  publish.py  score.py  sim.py  validate.py
system1-measurement-source/tests/: scratch_fase.py  scratch_filters.py  scratch_wls.py  test_estimate_config.py  test_event_repub_footprint.py  test_influx_readers_writers.py  test_measure_determinism.py  test_noise_models_cadence.py
(+1215 files in other folders)
