[project]
name = "ieee33-measurement-source"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "pandapower==3.4.0",
  "networkx>=3.0",
  "influxdb-client==1.50.0",
  "pandas>=2.3",
  "numpy>=1.26,<2.4",
  "requests>=2.32",
  "python-dotenv>=1.0",
  "openpyxl>=3.1",
]

[project.scripts]
ingest   = "ieee33.ingest:main"
sim      = "ieee33.sim:main"
validate = "ieee33.validate:main"
fault-sim = "ieee33.fault_sim:main"
measure   = "ieee33.measure:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ieee33"]
